syntax = "proto3";

option csharp_namespace = "UserManagement.API.Protos";

package user;

service UserGrpc {
  rpc GetUserById (GetUserRequest) returns (UserResponse);
  rpc IsUserExists (GetUserRequest) returns (UserExistsResponse);
}

message GetUserRequest {
  int32 id = 1;
}

message UserResponse {
  int32 id = 1;
  string name = 2;
  string email = 3;
}

message UserExistsResponse {
  bool exists = 1;
}
